--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,15 +18,15 @@
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="static/js/html5shiv.js"></script>
+      <script src="/assets/js/html5shiv.js"></script>
     <![endif]-->
 
     <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="static/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="static/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="static/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="static/ico/apple-touch-icon-57-precomposed.png">
-    <link rel="shortcut icon" href="static/ico/favicon.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href=/assets/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href=/assets/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href=/assets/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href=/assets/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href=/assets/ico/favicon.png">
     <!-- Google Analytics Code -->
         <script type="text/javascript">
 
@@ -63,9 +63,7 @@
       </div>
     </div>
     <div class="container">
-    <div class="row">
           {{ content }}
-	</div>
     </div> <!-- /container -->
     <div class="modal-footer">
         <div class="row">
@@ -79,8 +77,8 @@
         </div>
     </div>
     <!-- javascript -->
-    <script src="static/js/sr20x.js"></script>
-    <script src="static/js/jquery.js"></script>
+    <script src="/assets/js/sr20x.js"></script>
+    <script src="/assets/js/jquery.js"></script>
 
   </body>
 </html>
